==> PAE-HP-TARDOR-2025/Master_Slave_Firmware/firmware_updater/canopennode/CO_driver.c <==
/*
 * CAN module object for generic microcontroller.
 *
 * This file is a template for other microcontrollers.
 *
 * @file        CO_driver.c
 * @ingroup     CO_driver
 * @author      Janez Paternoster
 * @copyright   2004 - 2020 Janez Paternoster
 *
 * This file is part of <https://github.com/CANopenNode/CANopenNode>, a CANopen Stack.
 *
 * Licensed under the Apache License, Version 2.0 (the "License"); you may not use this
 * file except in compliance with the License. You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software distributed under the License is
 * distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and limitations under the License.
 */

#include "sdkconfig.h"

#include "301/CO_driver.h"
#include "esp_log.h"
#include "driver/twai.h"
#include "driver/gpio.h"

#ifndef CONFIG_DEMO_SLAVE_TWAI_TX_GPIO
#define CONFIG_DEMO_SLAVE_TWAI_TX_GPIO 5
#endif
#ifndef CONFIG_DEMO_SLAVE_TWAI_RX_GPIO
#define CONFIG_DEMO_SLAVE_TWAI_RX_GPIO 4
#endif

// Map sdkconfig values into the TWAI driver enums.
#define CAN_TX_GPIO     ((gpio_num_t)CONFIG_DEMO_SLAVE_TWAI_TX_GPIO)
#define CAN_RX_GPIO     ((gpio_num_t)CONFIG_DEMO_SLAVE_TWAI_RX_GPIO)

static const char* TAG = "CO_DRIVER";
static bool driver_is_installed = false;

#ifndef CO_CANRXMSG_T_DEFINED
typedef struct {
    uint32_t ident;
    uint8_t DLC;
    uint8_t data[8];
} CO_CANrxMsg_t;
#define CO_CANRXMSG_T_DEFINED 1
#endif

void
CO_CANsetConfigurationMode(void* CANptr) {
    /* Put CAN module in configuration mode */
}

void
CO_CANsetNormalMode(CO_CANmodule_t* CANmodule) {
    CANmodule->CANnormal = false;
    // Arrancamos el driver TWAI si ya está instalado
    if (driver_is_installed) {
        if (twai_start() == ESP_OK) {
            CANmodule->CANnormal = true;
            ESP_LOGI(TAG, "TWAI driver started (TX=%d RX=%d)", (int)CAN_TX_GPIO, (int)CAN_RX_GPIO);
        }
    }
}

CO_ReturnError_t
CO_CANmodule_init(CO_CANmodule_t* CANmodule, void* CANptr, CO_CANrx_t rxArray[], uint16_t rxSize, CO_CANtx_t txArray[],
                  uint16_t txSize, uint16_t CANbitRate) {
    uint16_t i;

    /* verify arguments */
    if (CANmodule == NULL || rxArray == NULL || txArray == NULL) {
        return CO_ERROR_ILLEGAL_ARGUMENT;
    }

    /* Configure object variables */
    CANmodule->CANptr = CANptr;
    CANmodule->rxArray = rxArray;
    CANmodule->rxSize = rxSize;
    CANmodule->txArray = txArray;
    CANmodule->txSize = txSize;
    CANmodule->CANerrorStatus = 0;
    CANmodule->CANnormal = false;
    CANmodule->useCANrxFilters = (rxSize <= 32U) ? true : false; /* microcontroller dependent */
    CANmodule->bufferInhibitFlag = false;
    CANmodule->firstCANtxMessage = true;
    CANmodule->CANtxCount = 0U;
    CANmodule->errOld = 0U;

    for (i = 0U; i < rxSize; i++) {
        rxArray[i].ident = 0U;
        rxArray[i].mask = 0xFFFFU;
        rxArray[i].object = NULL;
        rxArray[i].CANrx_callback = NULL;
    }
    for (i = 0U; i < txSize; i++) {
        txArray[i].bufferFull = false;
    }

    /* Configure CAN module registers */

    /* Configure CAN timing */

    /* Configure CAN module hardware filters */
    if (CANmodule->useCANrxFilters) {
        /* CAN module filters are used, they will be configured with */
        /* CO_CANrxBufferInit() functions, called by separate CANopen */
        /* init functions. */
        /* Configure all masks so, that received message must match filter */
    } else {
        /* CAN module filters are not used, all messages with standard 11-bit */
        /* identifier will be received */
        /* Configure mask 0 so, that all messages with standard identifier are accepted */
    }

    /* configure CAN interrupt registers */
    /* --- CONFIGURACIÓN HARDWARE ESP32 (Tus pines) --- */
    if (!driver_is_installed) {
        ESP_LOGI(TAG, "Installing TWAI driver on TX=%d RX=%d...", (int)CAN_TX_GPIO, (int)CAN_RX_GPIO);

        // Configuración con tus pines definidos arriba
        twai_general_config_t g_config = TWAI_GENERAL_CONFIG_DEFAULT(CAN_TX_GPIO, CAN_RX_GPIO, TWAI_MODE_NORMAL);

        // Velocidad (Mapeamos el argumento CANbitRate)
        twai_timing_config_t t_config;
        switch (CANbitRate) {
            case 125:
                t_config = (twai_timing_config_t)TWAI_TIMING_CONFIG_125KBITS();
                break;
            case 250:
                t_config = (twai_timing_config_t)TWAI_TIMING_CONFIG_250KBITS();
                break;
            case 500:
                t_config = (twai_timing_config_t)TWAI_TIMING_CONFIG_500KBITS();
                break;
            case 1000:
                t_config = (twai_timing_config_t)TWAI_TIMING_CONFIG_1MBITS();
                break;
            default:
                ESP_LOGW(TAG, "Unsupported bit rate %u kbps, falling back to 500 kbps", CANbitRate);
                t_config = (twai_timing_config_t)TWAI_TIMING_CONFIG_500KBITS();
                break;
        }

        twai_filter_config_t f_config = TWAI_FILTER_CONFIG_ACCEPT_ALL();

        // Instalar
        if (twai_driver_install(&g_config, &t_config, &f_config) == ESP_OK) {
            driver_is_installed = true;
        } else {
            ESP_LOGE(TAG, "Fallo al instalar TWAI");
            return CO_ERROR_SYSCALL;
        }
    }
    return CO_ERROR_NO;
}

void
CO_CANmodule_disable(CO_CANmodule_t* CANmodule) {
    if (CANmodule != NULL) {
        /* turn off the module */
    }
}

CO_ReturnError_t
CO_CANrxBufferInit(CO_CANmodule_t* CANmodule, uint16_t index, uint16_t ident, uint16_t mask, bool_t rtr, void* object,
                   void (*CANrx_callback)(void* object, void* message)) {
    CO_ReturnError_t ret = CO_ERROR_NO;

    if ((CANmodule != NULL) && (object != NULL) && (CANrx_callback != NULL) && (index < CANmodule->rxSize)) {
        /* buffer, which will be configured */
        CO_CANrx_t* buffer = &CANmodule->rxArray[index];

        /* Configure object variables */
        buffer->object = object;
        buffer->CANrx_callback = CANrx_callback;

        /* CAN identifier and CAN mask, bit aligned with CAN module. Different on different microcontrollers. */
        buffer->ident = ident & 0x07FFU;
        if (rtr) {
            buffer->ident |= 0x0800U;
        }
        buffer->mask = (mask & 0x07FFU) | 0x0800U;

        /* Set CAN hardware module filter and mask. */
        if (CANmodule->useCANrxFilters) {}
    } else {
        ret = CO_ERROR_ILLEGAL_ARGUMENT;
    }

    return ret;
}

CO_CANtx_t*
CO_CANtxBufferInit(CO_CANmodule_t* CANmodule, uint16_t index, uint16_t ident, bool_t rtr, uint8_t noOfBytes,
                   bool_t syncFlag) {
    CO_CANtx_t* buffer = NULL;

    if ((CANmodule != NULL) && (index < CANmodule->txSize)) {
        /* get specific buffer */
        buffer = &CANmodule->txArray[index];

        /* CAN identifier, DLC and rtr, bit aligned with CAN module transmit buffer, microcontroller specific. */
        buffer->ident = ((uint32_t)ident & 0x07FFU) | ((uint32_t)(((uint32_t)noOfBytes & 0xFU) << 11U))
                        | ((uint32_t)(rtr ? 0x8000U : 0U));

        buffer->bufferFull = false;
        buffer->syncFlag = syncFlag;
    }

    return buffer;
}

CO_ReturnError_t
CO_CANsend(CO_CANmodule_t* CANmodule, CO_CANtx_t* buffer) {
    CO_ReturnError_t err = CO_ERROR_NO;

    /* Verify overflow */
    if (buffer->bufferFull) {
        if (!CANmodule->firstCANtxMessage) {
            /* don't set error, if bootup message is still on buffers */
            CANmodule->CANerrorStatus |= CO_CAN_ERRTX_OVERFLOW;
        }
        err = CO_ERROR_TX_OVERFLOW;
    }

    CO_LOCK_CAN_SEND(CANmodule);
    /* if CAN TX buffer is free, copy message to it */
    if (CANmodule->CANtxCount == 0) {
        CANmodule->bufferInhibitFlag = buffer->syncFlag;
        /* copy message and txRequest */
        // Construir mensaje TWAI
        twai_message_t msg;
        msg.identifier = buffer->ident & 0x07FFU;
        // DLC is encoded in bits 11-14 of buffer->ident by CO_CANtxBufferInit
        msg.data_length_code = (buffer->ident >> 11) & 0x0FU;
        msg.extd = 0; 
        msg.rtr = (buffer->ident & 0x8000U) ? 1 : 0;
        msg.ss = 0; 
        msg.self = 0; 
        msg.dlc_non_comp = 0;

        for(int i=0; i<8; i++) msg.data[i] = buffer->data[i];

        ESP_LOGI(TAG, "TX: id=0x%03lX dlc=%d data=[%02X %02X %02X %02X %02X %02X %02X %02X]",
                 (unsigned long)msg.identifier, msg.data_length_code,
                 msg.data[0], msg.data[1], msg.data[2], msg.data[3],
                 msg.data[4], msg.data[5], msg.data[6], msg.data[7]);

        // Wait up to 100ms for TX to complete (important for SDO responses!)
        TickType_t waitTicks = pdMS_TO_TICKS(100);
        if (waitTicks == 0) waitTicks = 1;
        
        esp_err_t txResult = twai_transmit(&msg, waitTicks);
        if (txResult == ESP_OK) {
            CANmodule->bufferInhibitFlag = buffer->syncFlag;
            CANmodule->firstCANtxMessage = false;
            ESP_LOGD(TAG, "TX success");
        } else {
            ESP_LOGW(TAG, "TWAI TX failed: %s (id=0x%03lX)", esp_err_to_name(txResult), (unsigned long)msg.identifier);
            // Mark buffer for retry
            buffer->bufferFull = true;
            CANmodule->CANtxCount++;
            err = CO_ERROR_TX_OVERFLOW; 
        }
    }
    /* if no buffer is free, message will be sent by interrupt */
    else {
        buffer->bufferFull = true;
        CANmodule->CANtxCount++;
    }
    CO_UNLOCK_CAN_SEND(CANmodule);

    return err;
}

void
CO_CANclearPendingSyncPDOs(CO_CANmodule_t* CANmodule) {
    uint32_t tpdoDeleted = 0U;

    CO_LOCK_CAN_SEND(CANmodule);
    /* Abort message from CAN module, if there is synchronous TPDO.
     * Take special care with this functionality. */
    if (/* messageIsOnCanBuffer && */ CANmodule->bufferInhibitFlag) {
        /* clear TXREQ */
        CANmodule->bufferInhibitFlag = false;
        tpdoDeleted = 1U;
    }
    /* delete also pending synchronous TPDOs in TX buffers */
    if (CANmodule->CANtxCount != 0U) {
        uint16_t i;
        CO_CANtx_t* buffer = &CANmodule->txArray[0];
        for (i = CANmodule->txSize; i > 0U; i--) {
            if (buffer->bufferFull) {
                if (buffer->syncFlag) {
                    buffer->bufferFull = false;
                    CANmodule->CANtxCount--;
                    tpdoDeleted = 2U;
                }
            }
            buffer++;
        }
    }
    CO_UNLOCK_CAN_SEND(CANmodule);

    if (tpdoDeleted != 0U) {
        CANmodule->CANerrorStatus |= CO_CAN_ERRTX_PDO_LATE;
    }
}

/* Get error counters from the module. If necessary, function may use different way to determine errors. */
static uint16_t rxErrors = 0, txErrors = 0, overflow = 0;

void
CO_CANmodule_process(CO_CANmodule_t* CANmodule) {
    uint32_t err;

    err = ((uint32_t)txErrors << 16) | ((uint32_t)rxErrors << 8) | overflow;

    if (CANmodule->errOld != err) {
        uint16_t status = CANmodule->CANerrorStatus;

        CANmodule->errOld = err;

        if (txErrors >= 256U) {
            /* bus off */
            status |= CO_CAN_ERRTX_BUS_OFF;
        } else {
            /* recalculate CANerrorStatus, first clear some flags */
            status &= 0xFFFF
                      ^ (CO_CAN_ERRTX_BUS_OFF | CO_CAN_ERRRX_WARNING | CO_CAN_ERRRX_PASSIVE | CO_CAN_ERRTX_WARNING
                         | CO_CAN_ERRTX_PASSIVE);

            /* rx bus warning or passive */
            if (rxErrors >= 128) {
                status |= CO_CAN_ERRRX_WARNING | CO_CAN_ERRRX_PASSIVE;
            } else if (rxErrors >= 96) {
                status |= CO_CAN_ERRRX_WARNING;
            }

            /* tx bus warning or passive */
            if (txErrors >= 128) {
                status |= CO_CAN_ERRTX_WARNING | CO_CAN_ERRTX_PASSIVE;
            } else if (txErrors >= 96) {
                status |= CO_CAN_ERRTX_WARNING;
            }

            /* if not tx passive clear also overflow */
            if ((status & CO_CAN_ERRTX_PASSIVE) == 0) {
                status &= 0xFFFF ^ CO_CAN_ERRTX_OVERFLOW;
            }
        }

        if (overflow != 0) {
            /* CAN RX bus overflow */
            status |= CO_CAN_ERRRX_OVERFLOW;
        }

        CANmodule->CANerrorStatus = status;
    }
}


    // Definición auxiliar para compatibilidad interna

/* ... (resto del archivo CO_driver.c arriba) ... */

/* BORRA EL TYPEDEF QUE HABÍA AQUÍ, YA NO HACE FALTA */

void CO_CANinterrupt(CO_CANmodule_t* CANmodule) {
    if (CANmodule == NULL || CANmodule->rxArray == NULL) {
        return;
    }

    twai_message_t msg;
    TickType_t waitTicks = pdMS_TO_TICKS(5);
    if (waitTicks == 0) {
        waitTicks = 1;
    }
    // Block briefly waiting for at least one frame, then drain the rest without waiting.
    if (twai_receive(&msg, waitTicks) != ESP_OK) {
        return;
    }

    do {
        ESP_LOGI(TAG, "RX: id=0x%03lX dlc=%d data=[%02X %02X %02X %02X %02X %02X %02X %02X]",
                 (unsigned long)msg.identifier, msg.data_length_code,
                 msg.data[0], msg.data[1], msg.data[2], msg.data[3],
                 msg.data[4], msg.data[5], msg.data[6], msg.data[7]);

        CO_CANrxMsg_t rcvMsg;
        rcvMsg.ident = msg.identifier;
        rcvMsg.DLC = msg.data_length_code;
        for (int i = 0; i < 8; i++) {
            rcvMsg.data[i] = msg.data[i];
        }

        CO_CANrx_t* buffer = &CANmodule->rxArray[0];
        bool matched = false;
        for (uint16_t index = CANmodule->rxSize; index > 0U; index--) {
            uint16_t rcvIdWFlag = (uint16_t)rcvMsg.ident;
            if (msg.rtr) {
                rcvIdWFlag |= 0x0800U;
            }

            if (((rcvIdWFlag ^ buffer->ident) & buffer->mask) == 0U) {
                matched = true;
                if (buffer->CANrx_callback != NULL) {
                    buffer->CANrx_callback(buffer->object, (void*)&rcvMsg);
                }
            }
            buffer++;
        }
        if (!matched) {
            ESP_LOGW(TAG, "RX: no matching buffer for id=0x%03lX", (unsigned long)msg.identifier);
        }
    } while (twai_receive(&msg, 0) == ESP_OK);
}
